terraform/compute.tf
resource "aws_instance" "instance_api" {
    ami = var.ami_id
    instance_type = var.instance_type
    security_groups = [aws_security_group.instances.name]

    tags = {
        Name = "${var.app_name}-${var.environment}-instance"
    }
}
